[gd_scene load_steps=13 format=3 uid="uid://dhiupvp3bbsb6"]

[ext_resource type="Script" path="res://Player.gd" id="1_3ggqx"]
[ext_resource type="Texture2D" uid="uid://53owit4n4o7u" path="res://Joe.png" id="2_cdgg3"]
[ext_resource type="AudioStream" uid="uid://bid0vbl31qp8f" path="res://Audio/LavaBurn.wav" id="3_lf70l"]
[ext_resource type="AudioStream" uid="uid://r30vqn8ewru0" path="res://Audio/Rock2.mp3" id="5_k30b6"]
[ext_resource type="AudioStream" uid="uid://c2u6kjs0xxkys" path="res://Audio/DashWind.mp3" id="5_vxan0"]
[ext_resource type="Texture2D" uid="uid://cd2b0lhkvxqml" path="res://Spawn.png" id="5_yj42m"]
[ext_resource type="Texture2D" uid="uid://bbtcqqui66g3v" path="res://ExitClosed.png" id="6_r5voo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r338v"]
size = Vector2(50, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2ep8"]
size = Vector2(100, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l5t27"]
size = Vector2(39, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqxx3"]
size = Vector2(1152, 87)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rl7yd"]

[node name="lv_1" type="Node2D"]
position = Vector2(11, 366)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(74, 519)
script = ExtResource("1_3ggqx")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_cdgg3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_r338v")

[node name="LeftRayCasts" type="Node2D" parent="Player"]

[node name="LeftTop" type="RayCast2D" parent="Player/LeftRayCasts"]
position = Vector2(0, -24)
scale = Vector2(1, 0.20002)
target_position = Vector2(-26, 0)
collision_mask = 8

[node name="LeftMid" type="RayCast2D" parent="Player/LeftRayCasts"]
scale = Vector2(1, 0.20002)
target_position = Vector2(-26, 0)
collision_mask = 8

[node name="LeftBot" type="RayCast2D" parent="Player/LeftRayCasts"]
position = Vector2(0, 24)
scale = Vector2(1, 0.20002)
target_position = Vector2(-26, 0)
collision_mask = 8

[node name="RightRayCasts" type="Node2D" parent="Player"]

[node name="RightTop" type="RayCast2D" parent="Player/RightRayCasts"]
position = Vector2(0, -24)
scale = Vector2(1, 0.20002)
target_position = Vector2(26, 0)
collision_mask = 8

[node name="RightMid" type="RayCast2D" parent="Player/RightRayCasts"]
scale = Vector2(1, 0.20002)
target_position = Vector2(26, 0)
collision_mask = 8

[node name="RightBot" type="RayCast2D" parent="Player/RightRayCasts"]
position = Vector2(0, 24)
scale = Vector2(1, 0.20002)
target_position = Vector2(26, 0)
collision_mask = 8

[node name="Sounds" type="Node2D" parent="Player"]

[node name="LavaDeath" type="AudioStreamPlayer2D" parent="Player/Sounds"]
stream = ExtResource("3_lf70l")
volume_db = 10.0

[node name="DashWind" type="AudioStreamPlayer2D" parent="Player/Sounds"]
stream = ExtResource("5_vxan0")
volume_db = -20.0

[node name="Jump" type="AudioStreamPlayer2D" parent="Player/Sounds"]
stream = ExtResource("5_k30b6")
pitch_scale = 2.0

[node name="Spawn" type="Node2D" parent="."]
position = Vector2(86, 593)
scale = Vector2(1, -2)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Spawn"]
texture = ExtResource("5_yj42m")

[node name="Exit" type="Node2D" parent="."]
position = Vector2(1840, 588)
scale = Vector2(1, -2)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Exit"]
texture = ExtResource("6_r5voo")

[node name="ExitArea" type="Area2D" parent="Exit"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit/ExitArea"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_e2ep8")

[node name="ExitOrb" type="Node2D" parent="."]
position = Vector2(1550, 494)
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="ExitOrb"]
offset_right = 39.0
offset_bottom = 43.0
color = Color(0.701961, 0.643137, 0.929412, 1)

[node name="ExitOrbArea" type="Area2D" parent="ExitOrb"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitOrb/ExitOrbArea"]
position = Vector2(19.5, 21.5)
shape = SubResource("RectangleShape2D_l5t27")

[node name="Grounds" type="Node2D" parent="."]

[node name="Ground2" type="StaticBody2D" parent="Grounds"]
position = Vector2(299, 500)
scale = Vector2(0.271567, 0.336042)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground2"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground2"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_xqxx3")

[node name="Ground6" type="StaticBody2D" parent="Grounds"]
position = Vector2(536, 271)
scale = Vector2(0.0658366, 2.70199)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground6"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground6"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_xqxx3")

[node name="Ground7" type="StaticBody2D" parent="Grounds"]
position = Vector2(-74, -377)
scale = Vector2(1.78865, 0.442839)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground7"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground7"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_xqxx3")

[node name="Ground3" type="StaticBody2D" parent="Grounds"]
position = Vector2(1218, 342)
scale = Vector2(0.375448, 0.391798)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground3"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground3"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_xqxx3")

[node name="Ground8" type="StaticBody2D" parent="Grounds"]
position = Vector2(1789, 586)
scale = Vector2(0.437176, 0.390241)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground8"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground8"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_xqxx3")

[node name="Ground4" type="StaticBody2D" parent="Grounds"]
position = Vector2(-67, 596)
scale = Vector2(0.0722402, -10.7821)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground4"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground4"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_xqxx3")

[node name="Ground5" type="StaticBody2D" parent="Grounds"]
position = Vector2(1891, 620)
scale = Vector2(0.073648, -13.1034)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground5"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground5"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_xqxx3")

[node name="Ground" type="StaticBody2D" parent="Grounds"]
position = Vector2(-13, 591)
scale = Vector2(0.202631, 0.342301)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_xqxx3")

[node name="DeathBoxes" type="Node2D" parent="."]

[node name="DeathBox" type="Area2D" parent="DeathBoxes"]
position = Vector2(925, 738)
scale = Vector2(120.496, -8.3171)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBoxes/DeathBox"]
position = Vector2(9.53674e-07, 0)
shape = SubResource("RectangleShape2D_rl7yd")

[node name="ColorRect" type="ColorRect" parent="DeathBoxes/DeathBox"]
offset_left = -10.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0.705882, 0, 0.188235, 1)

[node name="DeathBox2" type="Area2D" parent="DeathBoxes"]
position = Vector2(-157, 134)
rotation = 3.14159
scale = Vector2(11.5207, 76.7195)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBoxes/DeathBox2"]
position = Vector2(9.53674e-07, 0)
shape = SubResource("RectangleShape2D_rl7yd")

[node name="DeathBox3" type="Area2D" parent="DeathBoxes"]
position = Vector2(2083, 99)
rotation = 3.14159
scale = Vector2(11.5207, 76.7195)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBoxes/DeathBox3"]
position = Vector2(9.53674e-07, 0)
shape = SubResource("RectangleShape2D_rl7yd")

[node name="DashResets" type="Node2D" parent="."]

[connection signal="body_entered" from="Exit/ExitArea" to="Player" method="_on_exit_area_body_entered"]
[connection signal="body_entered" from="ExitOrb/ExitOrbArea" to="Player" method="_on_exit_orb_area_body_entered"]
[connection signal="body_entered" from="DeathBoxes/DeathBox" to="Player" method="_on_death_box_body_entered"]
[connection signal="body_entered" from="DeathBoxes/DeathBox2" to="Player" method="_on_death_box_body_entered"]
[connection signal="body_entered" from="DeathBoxes/DeathBox3" to="Player" method="_on_death_box_body_entered"]
