[gd_scene load_steps=18 format=3 uid="uid://bq6jye4vm0fdj"]

[ext_resource type="Script" path="res://Player.gd" id="1_uiwnb"]
[ext_resource type="Texture2D" uid="uid://53owit4n4o7u" path="res://Joe.png" id="2_jhb3m"]
[ext_resource type="AudioStream" uid="uid://bid0vbl31qp8f" path="res://Audio/LavaBurn.wav" id="3_mhbgm"]
[ext_resource type="AudioStream" uid="uid://c2u6kjs0xxkys" path="res://Audio/DashWind.mp3" id="4_hw80v"]
[ext_resource type="AudioStream" uid="uid://r30vqn8ewru0" path="res://Audio/Rock2.mp3" id="5_36m54"]
[ext_resource type="Texture2D" uid="uid://cd2b0lhkvxqml" path="res://Spawn.png" id="5_231w0"]
[ext_resource type="Texture2D" uid="uid://bbtcqqui66g3v" path="res://ExitClosed.png" id="6_cxowc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qqkpu"]
size = Vector2(50, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fcnpg"]
size = Vector2(100, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lly1k"]
size = Vector2(1152, 87)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pou7w"]
size = Vector2(20, 21.0616)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c3moj"]
size = Vector2(21.1649, 20.9987)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ma2p5"]
size = Vector2(20, 20.9875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tubum"]
size = Vector2(20, 21.0023)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ky3sv"]
size = Vector2(20, 21.0236)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ur3se"]
size = Vector2(20, 20.9426)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_waxq4"]
size = Vector2(40, 40)

[node name="lv_4" type="Node2D"]
position = Vector2(11, 366)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(64, 501)
script = ExtResource("1_uiwnb")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_jhb3m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_qqkpu")

[node name="LeftRayCasts" type="Node2D" parent="Player"]

[node name="LeftTop" type="RayCast2D" parent="Player/LeftRayCasts"]
position = Vector2(0, -24)
scale = Vector2(1, 0.20002)
target_position = Vector2(-26, 0)
collision_mask = 8

[node name="LeftMid" type="RayCast2D" parent="Player/LeftRayCasts"]
scale = Vector2(1, 0.20002)
target_position = Vector2(-26, 0)
collision_mask = 8

[node name="LeftBot" type="RayCast2D" parent="Player/LeftRayCasts"]
position = Vector2(0, 24)
scale = Vector2(1, 0.20002)
target_position = Vector2(-26, 0)
collision_mask = 8

[node name="RightRayCasts" type="Node2D" parent="Player"]

[node name="RightTop" type="RayCast2D" parent="Player/RightRayCasts"]
position = Vector2(0, -24)
scale = Vector2(1, 0.20002)
target_position = Vector2(26, 0)
collision_mask = 8

[node name="RightMid" type="RayCast2D" parent="Player/RightRayCasts"]
scale = Vector2(1, 0.20002)
target_position = Vector2(26, 0)
collision_mask = 8

[node name="RightBot" type="RayCast2D" parent="Player/RightRayCasts"]
position = Vector2(0, 24)
scale = Vector2(1, 0.20002)
target_position = Vector2(26, 0)
collision_mask = 8

[node name="Sounds" type="Node2D" parent="Player"]

[node name="LavaDeath" type="AudioStreamPlayer2D" parent="Player/Sounds"]
stream = ExtResource("3_mhbgm")

[node name="DashWind" type="AudioStreamPlayer2D" parent="Player/Sounds"]
stream = ExtResource("4_hw80v")
volume_db = -20.0

[node name="Jump" type="AudioStreamPlayer2D" parent="Player/Sounds"]
stream = ExtResource("5_36m54")
pitch_scale = 2.0

[node name="Spawn" type="Node2D" parent="."]
z_index = 3
position = Vector2(86, 593)
scale = Vector2(1, -2)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Spawn"]
texture = ExtResource("5_231w0")

[node name="Exit" type="Node2D" parent="."]
z_index = 3
position = Vector2(1840, 588)
scale = Vector2(1, -2)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Exit"]
texture = ExtResource("6_cxowc")

[node name="ExitArea" type="Area2D" parent="Exit"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit/ExitArea"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_fcnpg")

[node name="Grounds" type="Node2D" parent="."]

[node name="Ground2" type="StaticBody2D" parent="Grounds"]
position = Vector2(413, 13.0001)
scale = Vector2(0.137185, -3.85345)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground2"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground2"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_lly1k")

[node name="Ground6" type="StaticBody2D" parent="Grounds"]
position = Vector2(158, 591)
scale = Vector2(0.0409748, -8.80338)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground6"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground6"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_lly1k")

[node name="Ground7" type="StaticBody2D" parent="Grounds"]
position = Vector2(872, 314)
scale = Vector2(0.00606717, -4.78381)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground7"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground7"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_lly1k")

[node name="Ground3" type="StaticBody2D" parent="Grounds"]
position = Vector2(276, -17.0001)
scale = Vector2(0.375037, 0.384293)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground3"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground3"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_lly1k")

[node name="Ground9" type="StaticBody2D" parent="Grounds"]
position = Vector2(1072, 12.0002)
scale = Vector2(0.137185, -4.53345)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground9"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground9"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_lly1k")

[node name="Ground10" type="StaticBody2D" parent="Grounds"]
position = Vector2(935, -18.0001)
scale = Vector2(0.375037, 0.384293)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground10"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground10"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_lly1k")

[node name="Ground11" type="StaticBody2D" parent="Grounds"]
position = Vector2(1583, 12.0002)
scale = Vector2(0.137185, -4.97345)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground11"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground11"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_lly1k")

[node name="Ground12" type="StaticBody2D" parent="Grounds"]
position = Vector2(1446, -18.0001)
scale = Vector2(0.256166, 0.349952)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground12"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground12"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_lly1k")

[node name="Ground8" type="StaticBody2D" parent="Grounds"]
position = Vector2(1789, 586)
scale = Vector2(0.437176, 0.390241)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground8"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground8"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_lly1k")

[node name="Ground" type="StaticBody2D" parent="Grounds"]
position = Vector2(-13, 591)
scale = Vector2(0.189034, 0.342301)
collision_layer = 9
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Grounds/Ground"]
offset_right = 1152.0
offset_bottom = 87.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Grounds/Ground"]
position = Vector2(576, 43.5)
shape = SubResource("RectangleShape2D_lly1k")

[node name="DeathBoxes" type="Node2D" parent="."]

[node name="DeathBox" type="Area2D" parent="DeathBoxes"]
position = Vector2(925, 738)
scale = Vector2(120.496, -8.3171)
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="DeathBoxes/DeathBox"]
offset_left = -10.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0.705882, 0, 0.188235, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBoxes/DeathBox"]
position = Vector2(0, -0.530777)
shape = SubResource("RectangleShape2D_pou7w")

[node name="DeathBox6" type="Area2D" parent="DeathBoxes"]
position = Vector2(867, 96)
scale = Vector2(-0.537397, -19.8205)
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="DeathBoxes/DeathBox6"]
offset_left = -10.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0.705882, 0, 0.188235, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBoxes/DeathBox6"]
position = Vector2(-0.582397, -0.499359)
shape = SubResource("RectangleShape2D_c3moj")

[node name="DeathBox4" type="Area2D" parent="DeathBoxes"]
position = Vector2(933, -468)
scale = Vector2(122.793, -15.1991)
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="DeathBoxes/DeathBox4"]
offset_left = -10.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0.705882, 0, 0.188235, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBoxes/DeathBox4"]
position = Vector2(0, -0.493746)
shape = SubResource("RectangleShape2D_ma2p5")

[node name="DeathBox5" type="Area2D" parent="DeathBoxes"]
position = Vector2(1961, 68)
scale = Vector2(6.31264, -47.081)
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="DeathBoxes/DeathBox5"]
offset_left = -10.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0.705882, 0, 0.188235, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBoxes/DeathBox5"]
position = Vector2(0, -0.501158)
shape = SubResource("RectangleShape2D_tubum")

[node name="DeathBox7" type="Area2D" parent="DeathBoxes"]
position = Vector2(-42, 73)
scale = Vector2(6.31264, -47.081)
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="DeathBoxes/DeathBox7"]
offset_left = -10.0
offset_top = -11.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0.705882, 0, 0.188235, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBoxes/DeathBox7"]
position = Vector2(0, -0.511777)
shape = SubResource("RectangleShape2D_ky3sv")

[node name="DeathBox2" type="Area2D" parent="DeathBoxes"]
position = Vector2(-158, 99.0001)
rotation = 3.14159
scale = Vector2(11.5207, 76.7195)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBoxes/DeathBox2"]
position = Vector2(9.53674e-07, 0)
shape = SubResource("RectangleShape2D_ur3se")

[node name="DeathBox3" type="Area2D" parent="DeathBoxes"]
position = Vector2(2083, 99)
rotation = 3.14159
scale = Vector2(11.5207, 76.7195)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBoxes/DeathBox3"]
position = Vector2(9.53674e-07, 0)
shape = SubResource("RectangleShape2D_ur3se")

[node name="ExitOrb" type="Node2D" parent="."]
position = Vector2(1778, -215)
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="ExitOrb"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.701961, 0.643137, 0.929412, 1)

[node name="ExitOrbArea" type="Area2D" parent="ExitOrb"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitOrb/ExitOrbArea"]
position = Vector2(20, 20)
shape = SubResource("RectangleShape2D_waxq4")

[node name="DashResets" type="Node2D" parent="."]

[connection signal="body_entered" from="Exit/ExitArea" to="Player" method="_on_exit_area_body_entered" flags=18]
[connection signal="body_entered" from="DeathBoxes/DeathBox" to="Player" method="_on_death_box_body_entered" flags=18]
[connection signal="body_entered" from="DeathBoxes/DeathBox6" to="Player" method="_on_death_box_body_entered" flags=18]
[connection signal="body_entered" from="DeathBoxes/DeathBox4" to="Player" method="_on_death_box_body_entered" flags=18]
[connection signal="body_entered" from="DeathBoxes/DeathBox5" to="Player" method="_on_death_box_body_entered" flags=18]
[connection signal="body_entered" from="DeathBoxes/DeathBox7" to="Player" method="_on_death_box_body_entered" flags=18]
[connection signal="body_entered" from="DeathBoxes/DeathBox2" to="Player" method="_on_death_box_body_entered" flags=18]
[connection signal="body_entered" from="DeathBoxes/DeathBox3" to="Player" method="_on_death_box_body_entered" flags=18]
[connection signal="body_entered" from="ExitOrb/ExitOrbArea" to="Player" method="_on_exit_orb_area_body_entered"]
